fixing fade thing on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,11 @@
   );
 }
 
+@theme {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
